# autonomous-defense-system

./: .env.example  .gitattributes  .gitignore  README.md
agent-brain/: README.md  pyproject.toml
agent-brain/scripts/: test_ops_dangerous_flow.py
agent-brain/src/agent_brain/: __init__.py  main.py
agent-brain/src/agent_brain/agents/: __init__.py  coordinator.py  planner.py  planner_revision.py  red_teamer.py
agent-brain/src/agent_brain/audit/: __init__.py  audit_logger.py  kylin_audit_bridge.py  ops_audit_log.py  tcm_integrity.py
agent-brain/src/agent_brain/domain/: __init__.py  models.py
agent-brain/src/agent_brain/executors/: __init__.py  least_privilege_executor.py  seccomp_loongarch.py  systemd_sandbox.py
agent-brain/src/agent_brain/integrations/: __init__.py  actuator_client.py  formal_verifier_client.py  kafka_consumer.py  mcp_client.py  (+3 more)
agent-brain/tests/: test_actuator_client.py  test_audit_logger.py  test_audit_route.py  test_intent_validator.py  test_kafka_event_ingest.py  test_least_privilege_executor.py  test_mcp_client.py  test_ops_audit_log.py  test_ops_intent_parser.py  test_ops_orchestrator.py  test_ops_route.py  test_os_topology_probe.py  test_phase6_unified_models.py  test_planner_agent.py  test_policy_client.py  test_prompt_injection_guard.py  test_red_teamer_agent.py  test_revision_coordinator.py  test_system_config_guard.py  test_system_status_route.py  test_workflow_demo.py
formal-verifier/: README.md  pyproject.toml
formal-verifier/src/formal_verifier/: __init__.py  main.py  providers.py
formal-verifier/tests/: test_verifier.py
(+243 files in other folders)
