[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-brain"
version = "0.1.0"
description = "LangGraph multi-agent workflow skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "langgraph>=0.2.0",
  "httpx>=0.27.0",
  "kafka-python>=2.0.2"
]

[project.optional-dependencies]
# Install with `pip install -e .[mcp]` to enable real MCP stdio mode
# (TopologyMCPClient mode=real). The local mode does not require this dep.
mcp = ["mcp>=1.2.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

