[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formal-verifier"
version = "0.1.0"
description = "Formal policy verifier skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Tests live under tests/ and import the package from src/. Adding
# pythonpath here means contributors can run "pytest" without first
# doing "pip install -e ." in a fresh venv.
pythonpath = ["src"]
testpaths = ["tests"]

